--- a/public/css/loginUtil.css
+++ b/public/css/loginUtil.css
@@ -1,539 +1,6 @@
-
-
-
-
-/*//////////////////////////////////////////////////////////////////
-[ FONT ]*/
-
-@font-face {
-  font-family: Montserrat-Regular;
-  src: url('../fonts/montserrat/Montserrat-Regular.ttf'); 
-}
-
-@font-face {
-  font-family: Montserrat-ExtraBold;
-  src: url('../fonts/montserrat/Montserrat-ExtraBold.ttf'); 
-}
-
-@font-face {
-  font-family: Montserrat-Bold;
-  src: url('../fonts/montserrat/Montserrat-Bold.ttf'); 
-}
-
-
-/*//////////////////////////////////////////////////////////////////
-[ RESTYLE TAG ]*/
-
-
-
-
-* {
-    margin: 0px; 
-    padding: 0px; 
-    box-sizing: border-box;
-}
-
-body, html {
-    height: 100%;
-    font-family: Montserrat-Regular, sans-serif;
-}
-
-/*---------------------------------------------*/
-a {
-    font-family: Montserrat-Regular;
-    font-size: 14px;
-    line-height: 1.7;
-    color: #666666;
-    margin: 0px;
-    transition: all 0.4s;
-    -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-}
-
-a:focus {
-    outline: none !important;
-}
-
-a:hover {
-    text-decoration: none;
-  color: #fff;
-}
-
-
-
-/*---------------------------------------------*/
-h1,h2,h3,h4,h5,h6 {
-    margin: 0px;
-}
-
-p {
-    font-family: Montserrat-Regular;
-    font-size: 14px;
-    line-height: 1.7;
-    color: #666666;
-    margin: 0px;
-}
-
-ul, li {
-    margin: 0px;
-    list-style-type: none;
-}
-
-
-/*---------------------------------------------*/
-input {
-    outline: none;
-    border: none;
-}
-
-textarea {
-  outline: none;
-  border: none;
-}
-
-textarea:focus, input:focus {
-  border-color: transparent !important;
-}
-
-input:focus::-webkit-input-placeholder { color:transparent; }
-input:focus:-moz-placeholder { color:transparent; }
-input:focus::-moz-placeholder { color:transparent; }
-input:focus:-ms-input-placeholder { color:transparent; }
-
-textarea:focus::-webkit-input-placeholder { color:transparent; }
-textarea:focus:-moz-placeholder { color:transparent; }
-textarea:focus::-moz-placeholder { color:transparent; }
-textarea:focus:-ms-input-placeholder { color:transparent; }
-
-input::-webkit-input-placeholder { color: #999999; }
-input:-moz-placeholder { color: #999999; }
-input::-moz-placeholder { color: #999999; }
-input:-ms-input-placeholder { color: #999999; }
-
-textarea::-webkit-input-placeholder { color: #999999; }
-textarea:-moz-placeholder { color: #999999; }
-textarea::-moz-placeholder { color: #999999; }
-textarea:-ms-input-placeholder { color: #999999; }
-
-/*---------------------------------------------*/
-button {
-    outline: none !important;
-    border: none;
-    background: transparent;
-}
-
-button:hover {
-    cursor: pointer;
-}
-
-iframe {
-    border: none !important;
-}
-
-
-/*//////////////////////////////////////////////////////////////////
-[ Utility ]*/
-.txt1 {
-  font-family: Montserrat-Regular;
-  font-size: 16px;
-  color: #cccccc;
-  line-height: 1.4;  
-  align-items: center;
-  justify-content: center;
-  background-position: center;
-} 
-
-.bo1 {
-  border-bottom: 1px solid #999999;
-}
-
-.hov1:hover {
-  border-color: #d33f8d;
-}
-
-
-/*//////////////////////////////////////////////////////////////////
-[ login ]*/
-
-.limiter {
-  width: 100%;
-  margin: 0 auto;
-}
-
-.container-login100 {
-  width: 100%;  
-  min-height: 100vh;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  padding: -225px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  
-  position: relative;
-  z-index: 1;
-}
-
-.container-login100::before {
-  content: "";
-  display: block;
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background: #1C1C1C;
-  background: -webkit-linear-gradient(bottom, #1C1C1C, 	#A9A9A9);
-  background: -o-linear-gradient(bottom, #1C1C1C, 	#A9A9A9);
-  background: -moz-linear-gradient(bottom, #1C1C1C, 	#A9A9A9);
-  background: linear-gradient(bottom, #1C1C1C, 	#A9A9A9);
-  opacity: 0.9;
-}
-
-.wrap-login100 {
-  width: 390px;
-  background: transparent;
-}
-
-
-
-/*------------------------------------------------------------------
-[  ]*/
-.login100-form {
-  width: 100%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.login100-form-title {
-  font-family: Montserrat-ExtraBold;
-  font-size: 24px;
-  color: #fff;
-  line-height: 1.2;
-  text-align: center;
-
-  width: 100%;
-  display: block;
-}
-
-/*---------------------------------------------*/
-.login100-form-avatar {
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
-  overflow: hidden;
-  margin: 0 auto;
-}
-.login100-form-avatar img {
-  width: 100%;
-}
-
-
-/*---------------------------------------------*/
-.wrap-input100 {
-  position: relative;
-  width: 100%;
-  z-index: 1;
-}
-
-.input100 {
-  font-family: Montserrat-Bold;
-  font-size: 15px;
-  line-height: 1.2;
-  color: #333333;
-
-  display: block;
-  width: 100%;
-  background: #fff;
-  height: 50px;
-  border-radius: 25px;
-  padding: 0 30px 0 53px;
-}
-
-
-/*------------------------------------------------------------------
-[ Focus ]*/
-.focus-input100 {
-  display: block;
-  position: absolute;
-  border-radius: 25px;
-  bottom: 0;
-  left: 0;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  box-shadow: 0px 0px 0px 0px;
-  color: #1C1C1C;
-}
-
-.input100:focus + .focus-input100 {
-  -webkit-animation: anim-shadow 0.5s ease-in-out forwards;
-  animation: anim-shadow 0.5s ease-in-out forwards;
-}
-
-@-webkit-keyframes anim-shadow {
-  to {
-    box-shadow: 0px 0px 80px 30px;
-    opacity: 0;
-  }
-}
-
-@keyframes anim-shadow {
-  to {
-    box-shadow: 0px 0px 80px 30px;
-    opacity: 0;
-  }
-}
-
-.symbol-input100 {
-  font-size: 15px;
-  color: #999999;
-
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  align-items: center;
-  position: absolute;
-  border-radius: 25px;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding-left: 30px;
-  pointer-events: none;
-
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  transition: all 0.4s;
-}
-
-.input100:focus + .focus-input100 + .symbol-input100 {
-  color: #333333;
-  padding-left: 23px;
-}
-
-
-/*------------------------------------------------------------------
-[ Button ]*/
-.container-login100-form-btn {
-  width: 100%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.login100-form-btn {
-  font-family: Montserrat-Bold;
-  font-size: 15px;
-  line-height: 1.5;
-  color: #e0e0e0;
-
-  width: 100%;
-  height: 50px;
-  border-radius: 25px;
-  background: #333333;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 25px;
-
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  transition: all 0.4s;
-
-  position: relative;
-  z-index: 1;
-}
-
-.login100-form-btn::before {
-  content: "";
-  display: block;
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  border-radius: 25px;
-  top: 0;
-  left: 0;
-  background: #1C1C1C;
-  background: -webkit-linear-gradient(left, #1C1C1C, #a9a9a9);
-  background: -o-linear-gradient(left, #1C1C1C, #a9a9a9);
-  background: -moz-linear-gradient(left, #1C1C1C, #a9a9a9);
-  background: linear-gradient(left, #1C1C1C, #a9a9a9);
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  transition: all 0.4s;
-  opacity: 0;
-}
-
-.login100-form-btn:hover {
-  background: transparent;
-  color: #fff;
-}
-
-.login100-form-btn:hover:before {
-  opacity: 1;
-}
-
-/*------------------------------------------------------------------
-[ Button sign in with ]*/
-.btn-face,
-.btn-google {
-  font-family: Raleway-Bold;
-  font-size: 16px;
-  line-height: 1.2;
-
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: calc((100% - 10px) / 2);
-  height: 40px;
-  border-radius: 3px;
-  border: 1px solid #e6e6e6;
-  background-color: #fff;
-
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  transition: all 0.4s;
-}
-
-
-.btn-face {
-  color: #3b5998;
-}
-
-.btn-face i {
-  font-size: 20px;
-  margin-right: 10px;
-  padding-bottom: 1px;
-}
-
-.btn-google {
-  color: #555555;
-}
-
-.btn-google img {
-  width: 19px;
-  margin-right: 10px;
-  padding-bottom: 1px;
-}
-
-
-.btn-face:hover,
-.btn-google:hover {
-  border-color: #d33f8d;
-}
-
-
-
-/*------------------------------------------------------------------
-[ Alert validate ]*/
-
-.validate-input {
-  position: relative;
-}
-
-.alert-validate::before {
-  content: attr(data-validate);
-  position: absolute;
-  max-width: 70%;
-  background-color: white;
-  border: 1px solid #c80000;
-  border-radius: 14px;
-  padding: 4px 25px 4px 10px;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%);
-  right: 8px;
-  pointer-events: none;
-
-  font-family: Montserrat-Bold;
-  color: #c80000;
-  font-size: 13px;
-  line-height: 1.4;
-  text-align: left;
-
-  visibility: hidden;
-  opacity: 0;
-
-  -webkit-transition: opacity 0.4s;
-  -o-transition: opacity 0.4s;
-  -moz-transition: opacity 0.4s;
-  transition: opacity 0.4s;
-}
-
-.alert-validate::after {
-  content: "\f06a";
-  font-family: FontAwesome;
-  display: block;
-  position: absolute;
-  color: #c80000;
-  font-size: 15px;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%);
-  right: 13px;
-}
-
-.alert-validate:hover:before {
-  visibility: visible;
-  opacity: 1;
-}
-
-@media (max-width: 992px) {
-  .alert-validate::before {
-    visibility: visible;
-    opacity: 1;
-  }
-}
-
-/*//////////////////////////////////////////////////////////////////
-[ responsive ]*/
-
-@media (max-width: 576px) {
-  .wrap-login100 {
-    padding-top: 80px;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-}
+/*[ FONT SIZE ]
+///////////////////////////////////////////////////////////
+*/
 .fs-1 {font-size: 1px;}
 .fs-2 {font-size: 2px;}
 .fs-3 {font-size: 3px;}
@@ -3515,147 +2982,7 @@ iframe {
 	right: 0px;
 	bottom: 0px;
 }
-body {
-  background-color: #f6f6f6;
-  color: #707070;
-  font: 16px Verdana, sans-serif;
-  width: 100%;
-  min-height: 100%;
-}
 
-#maluco{
-  margin-top: 0;
-}
-
-#conteudo {
-	width: 70%;
-	float: left;
-	text-align: center;
-}
-
-ul {
-  
-  width: 100%;
-}
-
-.navbar {
-  background-image: linear-gradient( to right, #F8F8F8, #343434);
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-#navegacao{
-  margin-right: 12px;
-}
-
-li {
-  float: right;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 30px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  font-weight: bold;
-}
-
-#lista {
-  margin-top: 160px;
-  width: 970px;
-  height: 436px;
-  background: #FFFFFF 0% 0% no-repeat padding-box;
-  box-shadow: -3px -5px 6px #00000024;
-  border-radius: 15px;
-  opacity: 1;
-  float: right;
-}
-
-table {
-  margin-left: 60px;
-  border-collapse: collapse;
-  width: 75%;
-  
-}
-
-th, td {
-  padding: 8px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
-}
-
-th {
-  margin-top: 50px;
-}
-
-.barra {
-  background-color: #fff;
-  height: 370px;
-  width: 280px;
-  display: inline-block;
-  margin-top: 160px;
-  color:#fff;
-  border-radius: 20px;
-  box-shadow: -3px -5px 6px #00000029;
-}
-
-
-#cor {
-  color:#707070;
-}
-
-.nav-link {
-  text-align: left;
-  width: 200px;
-  margin-right: 55px;
-  margin-top: -20px;
-}
-
-
-#tabela {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 60px;
-}
-
-#busca {
-  width: 969px;
-  border: 0.5px solid #707070;
-  margin-top: 55px;
-  display: flex;
-  opacity: 60%;
-}
-
-.float{
-	position:fixed;
-	width:60px;
-	height:60px;
-	bottom:40px;
-	right:40px;
-	background-color:#707070;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-	box-shadow: 2px 2px 3px #999;
-}
-
-.my-float{
-	margin-top:22px;
-}
-
-#add-button{
-  padding-top: 17px;
-}
 
 
 
