Inicio do projeto, tela login, e algumas outras

--- a/resources/views/frontend/login/login.edge
+++ b/resources/views/frontend/login/login.edge
@@ -1,35 +1,30 @@
-<<!doctype html>
+<!doctype html>
 <html lang="pt-br">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Lemes Company</title>
-
         
-        
-        <!-- Icone Titulo-->
+        <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         
-        
-        
         <!-- CSS e Bootstrap)-->
-        <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"  
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" 
-        crossorigin="anonymous">
-        
-
-        <link href="css/styles.css" rel="stylesheet" />
+        <link rel="stylesheet" type="text/css" href="css/styles.css"> 
+        <link rel="stylesheet" type="text/css" href="css/loginUtil.css">
+        <link rel="stylesheet" type="text/css" href="css/stylesordem.css">
     </head>
 
     <body>
 
-      <div class="limiter">
-      
+        <div class="limiter">
+
         <div class="container-login100" style="background-image: url('fundo2.jpg');">
           <div class="wrap-login100 p-t-190 p-b-30">
-            <form class="login100-form validate-form">
+            
+            <form class="login100-form validate-form" action="/login" method="POST">
+            {{ csrfField() }}
+
               <div class="login100-form-avatar">
                 <img src="logo.png" alt="AVATAR">
               </div>
@@ -39,7 +34,7 @@
               </span>
 
               <div class="wrap-input100 validate-input m-b-10" data-validate = "Informe o usuário">
-                <input class="input100" type="text" name="username" placeholder="Usuário">
+                <input class="input100" type="text" name="email" placeholder="Email">
                 <span class="focus-input100"></span>
                 <span class="symbol-input100">
                   <i class="fa fa-user"></i>
@@ -47,7 +42,7 @@
               </div>
 
               <div class="wrap-input100 validate-input m-b-10" data-validate = "Informe a senha">
-                <input class="input100" type="password" name="pass" placeholder="Senha">
+                <input class="input100" type="password" name="password" placeholder="Senha">
                 <span class="focus-input100"></span>
                 <span class="symbol-input100">
                   <i class="fa fa-lock"></i>
@@ -55,7 +50,7 @@
               </div>
 
               <div class="container-login100-form-btn p-t-10">
-                <button class="login100-form-btn">
+                <button class="login100-form-btn" type="submit">
                   Entrar
                 </button>
               </div>
@@ -71,5 +66,6 @@
           </div>
         </div>
       </div>
-      </form>
+
     </body>
+</html>
