--- a/resources/views/layouts/menu.edge
+++ b/resources/views/layouts/menu.edge
@@ -1,22 +1,26 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container px-5">
-        
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                
-                <li class="nav-item"><a class="nav-link active" aria-current="home" href="/home">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="/ordemservico">Ordens de Serviço</a></li>
-                <li class="nav-item"><a class="nav-link" href="/contato">Clientes</a></li>
-                <li class="nav-item"><a class="nav-link" href="/servico">Serviços</a></li>
-                @loggedIn
-                <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
-                @else
-                <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-                <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-                @endloggedIn
-                
-            </ul>
-        </div>
-    </div>
-</nav>
+<div class="barra">
+      <ul>
+        @loggedIn
+        <li class="nav-item">
+          <a id="cor" class="nav-link" href="#">Ordem de Serviço</a>
+        </li>
+        <li class="nav-item">
+          <a id="cor" class="nav-link" href="#">Serviços</a>
+        </li>
+        <li class="nav-item">
+          <a id="cor" class="nav-link" href="#">Usuários</a>
+        </li>
+        <li class="nav-item">
+          <a id="cor" class="nav-link" href="#">Produtos</a>
+        </li>
+        <li class="nav-item">
+          <a id="cor" class="nav-link" href="#">Clientes</a>
+        </li>
+        <li class="nav-item">
+          <a id="cor" class="nav-link" href="#">Relatórios</a>
+        </li>
+        @endloggedIn
+
+
+      </ul>
+</div>
