--- a/resources/views/frontend/login.edge
+++ b/resources/views/frontend/login.edge
@@ -1,8 +1,6 @@
-
 @layout('layouts.master')
 
-
-
+@section('content')
 <h1>Login Lemes Company</h1>
 
   <form action="/register" method="POST">
@@ -29,7 +27,7 @@
 					</div>
 
 					<div class="wrap-input100 validate-input m-b-10" data-validate = "Informe a senha">
-						<input class="input100" type="password" name="pass" placeholder="Senha">
+						<input class="input100" type="password" name="password" placeholder="Senha">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock"></i>
@@ -37,7 +35,8 @@
 					</div>
 
 					<div class="container-login100-form-btn p-t-10">
-						<button class="login100-form-btn">
+						
+						<button class="login100-form-btn" type="submit" value="Submit">
 							Entrar
 						</button>
 					</div>
