--- a/resources/views/layouts/master.edge
+++ b/resources/views/layouts/master.edge
@@ -1,49 +1,28 @@
-<<!doctype html>
+<!doctype html>
 <html lang="pt-br">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Lemes Company</title>
+             
+        <!-- CSS e Bootstrap -->
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
+        <link rel="stylesheet" type="text/css" href="css/loginUtil.css">
+        <link rel="stylesheet" type="text/css" href="css/stylesordem.css">
 
-        
-        
-        <!-- Icone Titulo-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        
-        
-        
-        <!-- CSS e Bootstrap)-->
-        <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"  
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" 
-        crossorigin="anonymous">
-        
-
-        <link href="css/styles.css" rel="stylesheet" />
+        <!-- Icons -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
 
     <body>
         <!-- Nav Bar-->
+        @include('layouts.navbar')
+
+        <!-- Menu esquerdo-->
         @include('layouts.menu')
 
-        <!-- Header-->
-        @include('layouts.header')
-
-        <!-- Features section-->
+        <!-- Lado direito-->
         @!section('content')
-
-        
-        <!-- Footer-->
-        @include('layouts.footer')
-
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-        
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-        
-        
-        
+  
     </body>
 </html>
