Ajustes na estrutura

--- a/resources/views/frontend/clientes/index.edge
+++ b/resources/views/frontend/clientes/index.edge
@@ -1,6 +1,7 @@
 @layout("layouts.master")
 
 @section("content")
+
 <div id="lista">
   <div>
     <div id="busca">
@@ -20,7 +21,7 @@
       </thead>
       <tbody>
         <tr>
-          <td>Vinícius da Silva</td>
+          <td>Visão do show.edge</td>
           <td>01/01/2021</td>
           <td>Pronto</td>
           <td>R$50,00</td>
@@ -29,7 +30,7 @@
           <td><span class="material-icons">delete</span></td>
         </tr>
         <tr>
-          <td>Vinícius da Silva</td>
+          <td>Visão do show.edge</td>
           <td>01/01/2021</td>
           <td>Pronto</td>
           <td>R$50,00</td>
@@ -38,7 +39,7 @@
           <td><span class="material-icons">delete</span></td>
         </tr>
         <tr>
-          <td>Vinícius da Silva</td>
+          <td>Visão do show.edge</td>
           <td>01/01/2021</td>
           <td>Pronto</td>
           <td>R$50,00</td>
@@ -47,7 +48,7 @@
           <td><span class="material-icons">delete</span></td>
         </tr>
         <tr>
-          <td>Vinícius da Silva</td>
+          <td>Visão do show.edge</td>
           <td>01/01/2021</td>
           <td>Pronto</td>
           <td>R$50,00</td>
@@ -59,4 +60,11 @@
     </table>
   </div>
 </div>
+
+
+<a href="/cliente/create" class="float">
+  <i id="add-button" class="material-icons">add</i>
+</a>
+
+
 @endsection
