--- a/resources/views/layouts/menu.edge
+++ b/resources/views/layouts/menu.edge
@@ -2,7 +2,7 @@
       <ul>
         @loggedIn
         <li class="nav-item">
-          <a id="cor" class="nav-link" href="#">Ordem de Serviço</a>
+          <a id="cor" class="nav-link" href="/os">Ordem de Serviço</a>
         </li>
         <li class="nav-item">
           <a id="cor" class="nav-link" href="#">Serviços</a>
@@ -14,7 +14,7 @@
           <a id="cor" class="nav-link" href="#">Produtos</a>
         </li>
         <li class="nav-item">
-          <a id="cor" class="nav-link" href="#">Clientes</a>
+          <a id="cor" class="nav-link" href="/clientes">Clientes</a>
         </li>
         <li class="nav-item">
           <a id="cor" class="nav-link" href="#">Relatórios</a>
