--- a/resources/views/frontend/ordensservicos/index.edge
+++ b/resources/views/frontend/ordensservicos/index.edge
@@ -1,7 +1,6 @@
 @layout("layouts.master")
 
 @section("content")
-
 <div id="lista">
   <div>
     <div id="busca">
@@ -60,5 +59,9 @@
     </table>
   </div>
 </div>
+
+<a href="/os/create" class="float">
+  <i id="add-button" class="material-icons">add</i>
+</a>
 
 @endsection
