--- a/resources/views/layouts/master.edge
+++ b/resources/views/layouts/master.edge
@@ -1,14 +1,15 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <title>Lemes Company</title>
-             
+            
         <!-- CSS e Bootstrap -->
-        <link rel="stylesheet" type="text/css" href="css/styles.css">
-        <link rel="stylesheet" type="text/css" href="css/loginUtil.css">
-        <link rel="stylesheet" type="text/css" href="css/stylesordem.css">
+        {{ style("css/styles.css") }}
+        {{ style("css/loginUtil.css") }}
+        {{ style("css/stylesordem.css") }}
 
         <!-- Icons -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
