Correção ClienteController e EHandler

--- a/resources/views/frontend/clientes/create.edge
+++ b/resources/views/frontend/clientes/create.edge
@@ -79,8 +79,12 @@
           <input type="text" name="observacoes" class="form-control">
         </div>
 
-        <input type="submit" value="Submit" class="btn btn-primary">
-      </form>
+        <div class="">
+          <button class="login100-form-btn" type="submit">
+            Salvar
+          </button>
+        </div>
+      </form> 
     </div>
 
   </div>
