--- a/resources/views/layouts/menu.edge
+++ b/resources/views/layouts/menu.edge
@@ -11,7 +11,7 @@
           <a id="cor" class="nav-link" href="#">Usuários</a>
         </li>
         <li class="nav-item">
-          <a id="cor" class="nav-link" href="#">Produtos</a>
+          <a id="cor" class="nav-link" href="/produto">Produtos</a>
         </li>
         <li class="nav-item">
           <a id="cor" class="nav-link" href="/clientes">Clientes</a>
