--- a/resources/views/frontend/produtos/index.edge
+++ b/resources/views/frontend/produtos/index.edge
@@ -21,7 +21,7 @@
       </thead>
       <tbody>
 
-        @each(produto in Produto)
+        @each(produto in Produtos)
 
         <tr>
           <td><a href="/produto/show/{{ produto.id }}">{{ produto.nome }}</a></td>
