CRUD basico ClienteController finalizado, iniciada validacoes de seus forms

--- a/resources/views/frontend/clientes(testes)/index.edge
+++ b/resources/views/frontend/clientes(testes)/index.edge
@@ -5,7 +5,9 @@
 <div id="lista">
   <div>
     <div id="busca">
-
+      @if(flashMessage('notification'))
+        <span>{{ flashMessage('notification') }}</span>
+      @endif
     </div>
     <table id="tabela">
       <thead>
@@ -30,7 +32,15 @@
           <td>{{ cliente.estado }}</td>
           <td>{{ cliente.telefone }}</td>
           <td><a href="/cliente/edit/{{ cliente.id }}"><span class="material-icons">edit</span></a></td>
-          <td><a href="/cliente/destroy/{{ cliente.id }}""><span class="material-icons">delete</span></a></td>
+          <td>
+            <form action="/cliente/destroy/{{ cliente.id }}" method="POST">
+            {{ csrfField() }}
+
+              <button type="submit">
+                <span class="material-icons">delete</span>
+              </button>
+            </form>
+          </td>
         </tr>
         
         @endeach
