--- a/resources/views/frontend/clientes(testes)/create.edge
+++ b/resources/views/frontend/clientes(testes)/create.edge
@@ -36,7 +36,10 @@
 
         <div class="form-group">
           <label for="">email</label>
-          <input type="text" name="email" class="form-control">
+          <input type="text" name="email" value="{{ old('email', '') }}" class="form-control">
+              @if(hasErrorFor('email'))
+                </span> {{ getErrorFor('email') }} </span>
+              @endif
         </div>
 
         <div class="form-group">
