--- a/resources/views/frontend/clientes(testes)/show.edge
+++ b/resources/views/frontend/clientes(testes)/show.edge
@@ -2,10 +2,14 @@
 
 @section("content")
 
+
+
 <div id="lista">
   <div>
     <div id="busca">
-
+      @if(flashMessage('notification'))
+        <span>{{ flashMessage('notification') }}</span>
+      @endif
     </div>
   
     <table id="tabela">
