--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,7 +8,7 @@ body {
 
 h3 {
   font-family: Verdana, sans-serif;
-  font-size: 18px;
+  font-size: 20px;
   color: #707070;
   margin-bottom: -33px;
   margin-left: 50px;
@@ -348,9 +348,7 @@ a:hover {
   color: #fff;
 }
 
-h1,h2,h3,h4,h5,h6 {
-    margin: 0px;
-}
+
 
 p {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -667,4 +665,15 @@ iframe {
 
 .login100-form-btn:hover:before {
   opacity: 1;
+}
+#lista-cadastro-cliente {
+  margin-top: 160px;
+  width: 970px;
+  height: 750px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  box-shadow: -3px -5px 6px #00000024;
+  border-radius: 15px;
+  opacity: 1;
+  float: right;
+
 }
