--- a/resources/views/frontend/clientes/index.edge
+++ b/resources/views/frontend/clientes/index.edge
@@ -3,21 +3,22 @@
 @section("content")
 
 <div id="lista">
+  <h3>Cliente</h3>
   <div>
     <div id="busca">
 
     </div>
     <table id="tabela">
       <thead>
-        <tr>
-          <th>Cliente</th>
-          <th>Data de Nascimento</th>
-          <th>Cidade</th>
-          <th>Estado</th>
-          <th>Telefone</th>
-          <th></th>
-          <th></th>
-        </tr>
+        <thead>
+          <tr>
+              <th>Nome/Razão Social</th>
+              <th>Telefone</th>
+              <th>CPF/CNPJ</th>
+              <th></th>
+              <th></th>
+            </tr>
+      </thead>
       </thead>
       <tbody>
         
@@ -30,7 +31,7 @@
           <td>{{ cliente.estado }}</td>
           <td>{{ cliente.telefone }}</td>
           <td><a href="/cliente/edit/{{ cliente.id }}"><span class="material-icons">edit</span></a></td>
-          <td><a href="/cliente/destroy/{{ cliente.id }}""><span class="material-icons">delete</span></a></td>
+          <td><a href="/cliente/destroy/{{ cliente.id }}"><span class="material-icons">delete</span></a></td>
         </tr>
         
         @endeach
