--- a/resources/views/frontend/clientes/show.edge
+++ b/resources/views/frontend/clientes/show.edge
@@ -24,7 +24,7 @@
 
         <div class="label-float">
           <label>Nome / Razão Social</label>
-          <input type="text" name="nome" value={{ cliente.nome }} required/>
+          <input type="text" name="nome" value={{ cliente.nome }}/>
         </div>
 
         <div class="label-float">
