--- a/resources/views/frontend/ordensservicos/edit+.edge
+++ b/resources/views/frontend/ordensservicos/edit+.edge
@@ -1,3 +1,5 @@
+{{--  Falta terminar  --}}
+
 @layout("layouts.master")
 
 @section("content")
@@ -6,86 +8,107 @@
   <div>
 
     <div>
-      <form action="/cliente/update/{{ cliente.id }}" method="POST">
+      <form action="/ordemservico/update/{{ ordem.id }}" method="POST">
         {{ csrfField() }}
 
-        <div class="form-group">
-          <label for="">tipo</label>
-          <input type="text" name="tipo" value={{ cliente.tipo }} class="form-control">
+        <div id="busca">
         </div>
-
-        <div class="form-group">
-          <label for="">nome</label>
-          <input type="text" name="nome" value={{ cliente.nome }} class="form-control">
+      
+        <div class="label-float">
+          <input type="text" name="nome" value={{ cliente.nome }} required/>
+        <label>Cliente</label>
         </div>
-
-        <div class="form-group">
-          <label for="">cpf_cnpj</label>
-          <input type="text" name="cpf_cnpj" value={{ cliente.cpf_cnpj }} class="form-control">
+      
+        <div class="label-float">
+        <input type="date" placeholder=" " required/>
+        <label>Data da Entrada</label>
         </div>
-
-        <div class="form-group">
-          <label for="">data_nascimento</label>
-          <input type="date" name="data_nascimento" value={{ cliente.data_nascimento }} class="form-control">
+      
+        <div class="label-float">
+        <input type="text" placeholder=" " required/>
+        <label>Equipamento do Cliente</label>
         </div>
-
-        <div class="form-group">
-          <label for="">telefone</label>
-          <input type="text" name="telefone" value={{ cliente.telefone }} class="form-control">
+      
+        <div class="label-float">
+        <input type="text" placeholder=" " required/>
+        <label>Relato do Cliente</label>
         </div>
-
-        <div class="form-group">
-          <label for="">email</label>
-          <input type="text" name="email" value={{ cliente.email }} class="form-control">
+      
+        <div class="label-float">
+          <input list="lista-servicos" type="text" placeholder=" " required/>
+          <label>Selecione um Serviço</label>
         </div>
-
-        <div class="form-group">
-          <label for="">CEP</label>
-          <input type="text" name="CEP" value={{ cliente.CEP }} class="form-control">
+      
+        <datalist id="lista-servicos">
+          <option>Formatação</option>
+          <option>Manutenção em hardware</option>
+          <option>Teste</option>
+        </datalist>
+      
+        <div class="label-float">
+          <input list="lista-produtos" type="text" placeholder=" " required/>
+          <label>Selecione um Produto</label>
         </div>
-
-        <div class="form-group">
-          <label for="">endereco</label>
-          <input type="text" name="endereco" value={{ cliente.endereco }} class="form-control">
+      
+        <datalist id="lista-produtos">
+          <option>Teclado</option>
+          <option>Mouse</option>
+          <option>Memória DDR3</option>
+          <option>Pendrive</option>
+          <option>Teste</option>
+        </datalist>
+      
+        <div class="label-float">
+          <input type="number"  placeholder=" " required/>
+          <label>Valor</label>
         </div>
-
-        <div class="form-group">
-          <label for="">numero_endereco</label>
-          <input type="text" name="numero_endereco" value={{ cliente.numero_endereco }} class="form-control">
+      
+        <div class="label-float">
+          <input type="text" placeholder=" " required/>
+          <label>Telefone do Cliente</label>
         </div>
-
-        <div class="form-group">
-          <label for="">complemento</label>
-          <input type="text" name="complemento" value={{ cliente.complemento }} class="form-control">
+      
+        <div class="label-float">
+          <input type="text" placeholder=" "/>
+          <label>Observações do Técnico</label>
         </div>
-
-        <div class="form-group">
-          <label for="">bairro</label>
-          <input type="text" name="bairro" value={{ cliente.bairro }} class="form-control">
+      
+        <div class="label-float">
+          <input type="date" placeholder=" " required/>
+          <label>Data da Entrega</label>
         </div>
-
-        <div class="form-group">
-          <label for="">cidade</label>
-          <input type="text" name="cidade" value={{ cliente.cidade }} class="form-control">
+      
+        <div class="label-float">
+          <input list="lista-status" type="text" placeholder=" " required/>
+          <label>Selecione um Status</label>
         </div>
-
-        <div class="form-group">
-          <label for="">estado</label>
-          <input type="text" name="estado" value={{ cliente.estado }} class="form-control">
+      
+        <datalist id="lista-status">
+          <option>Em análise</option>
+          <option>Orçamento enviado</option>
+          <option>Orçamento aprovado</option>
+          <option>Cancelado</option>
+          <option>Em andamento</option>
+          <option>Pronto para entrega</option>
+          <option>Entregue</option>
+        </datalist>
+      
+        <div class="label-float">
+          <input list="lista-pagamento" type="text" placeholder=" " required/>
+          <label>Selecione uma Forma de Pagamento</label>
         </div>
-
-        <div class="form-group">
-          <label for="">observacoes</label>
-          <input type="text" name="observacoes" value={{ cliente.observacoes }} class="form-control">
-        </div>
-
+      
+        <datalist id="lista-pagamento">
+          <option>Dinheiro</option>
+          <option>Cartão de Crédito</option>
+          <option>Cartão de Débito</option>
+          <option>Pix</option>
+        </datalist>
         <div class="">
           <button class="login100-form-btn" type="submit">
             Salvar
           </button>
         </div>
-      </form> 
-    </div>
 
   </div>
 </div>
