--- a/resources/views/layouts/navbar.edge
+++ b/resources/views/layouts/navbar.edge
@@ -1,6 +1,6 @@
 <div>
     <ul class="navbar">
-      <img id="logo" src="../public/images/logo.png">
+      <img id="logo" src="../logo.png">
       <li><a id="navegacao" href="/logout"><span class="material-icons">logout</span></a></li>
     </ul>
 </div>  
