Alterações ClienteControlle, Validator, Views Create e Show

--- a/resources/views/frontend/clientes/show.edge
+++ b/resources/views/frontend/clientes/show.edge
@@ -5,7 +5,9 @@
 
 <div id="lista-cadastro-cliente">
   <div>
-    
+      @if(flashMessage('notification'))
+        <span>{{ flashMessage('notification') }}</span>
+      @endif
     
     
       <table id="tabela">
