--- a/resources/views/frontend/clientes/create.edge
+++ b/resources/views/frontend/clientes/create.edge
@@ -11,78 +11,117 @@
       </div>
 
       <div class="label-float">
-        <input list="lista-tipopessoa" type="text" placeholder=" " required/>
+        <input list="lista-tipopessoa" type="text" placeholder=" " name="tipo" value="{{ old('tipo', '') }}" required/>
         <label>Selecione o tipo Pessoa</label>
       </div>
 
       <datalist id="lista-tipopessoa">
-        <option>Pessoa Física</option>
-        <option>Pessoa Jurídica</option>
+        <option>PF</option>
+        <option>PJ</option>
       </datalist>
 
       <div class="label-float">
-        <input type="text" placeholder=" " required/>
+        <input type="text" placeholder=" " name="nome" value="{{ old('nome', '') }}" required/>
         <label>Nome / Razão Social</label>
+        @if(hasErrorFor('nome')) 
+          </span> {{ getErrorFor('nome') }} </span>
+        @endif
       </div>
 
       <div class="label-float">
-        <input type="text" placeholder=" " required/>
+        <input type="text" placeholder=" " name="cpf_cnpj" value="{{ old('cpf_cnpj', '') }}" required/>
         <label>CPF / CNPJ</label>
+        @if(hasErrorFor('cpf_cnpj')) 
+          </span> {{ getErrorFor('cpf_cnpj') }} </span>
+        @endif
       </div>
 
       <div class="label-float">
-        <input type="date" placeholder=" " required/>
+        <input type="date" placeholder=" " name="data_nascimento" value="{{ old('data_nascimento', '') }}" required/>
         <label>Data Nascimento / Data Abertura</label>
+        @if(hasErrorFor('data_nascimento')) 
+          </span> {{ getErrorFor('data_nascimento') }} </span>
+        @endif
       </div>
 
       <div class="label-float">
-        <input type="text" placeholder=" " required/>
+        <input type="text" placeholder=" " name="telefone" value="{{ old('telefone', '') }}" required/>
         <label>Telefone</label>
+        @if(hasErrorFor('telefone')) 
+          </span> {{ getErrorFor('telefone') }} </span>
+        @endif
       </div>
 
       <div class="label-float">
-        <input type="text" name="email" value="{{ old('email', '') }}" class="form-control"required/>
+        <input type="text" name="email" value="{{ old('email', '') }}" class="form-control" required/>
         <label>E-mail</label>
+        @if(hasErrorFor('email')) 
+          </span> {{ getErrorFor('email') }} </span>
+        @endif
       </div>
 
       <div class="label-float">
-        <input type="text" placeholder=" " required/>
+        <input type="text" placeholder=" " name="CEP" value="{{ old('CEP', '') }}" required/>
         <label>CEP</label>
+        @if(hasErrorFor('CEP')) 
+          </span> {{ getErrorFor('CEP') }} </span>
+        @endif
       </div>
 
       <div class="label-float">
-        <input type="text" placeholder=" " required/>
+        <input type="text" placeholder=" " name="endereco" value="{{ old('endereco', '') }}" required/>
         <label>Rua/Avenida</label>
+        @if(hasErrorFor('endereco')) 
+          </span> {{ getErrorFor('endereco') }} </span>
+        @endif
       </div>
 
       <div class="label-float">
-        <input type="number" placeholder=" " required/>
+        <input type="number" placeholder=" " name="numero_endereco" value="{{ old('numero_endereco', '') }}" required/>
         <label>Número</label>
+        @if(hasErrorFor('numero_endereco')) 
+          </span> {{ getErrorFor('numero_endereco') }} </span>
+        @endif
       </div>
 
       <div class="label-float">
-        <input type="text" placeholder=" " required/>
+        <input type="text" placeholder=" " name="complemento" value="{{ old('complemento', '') }}" required/>
         <label>Complemento</label>
+        @if(hasErrorFor('complemento')) 
+          </span> {{ getErrorFor('complemento') }} </span>
+        @endif
       </div>
 
       <div class="label-float">
-        <input type="text" placeholder=" " required/>
+        <input type="text" placeholder=" " name="bairro" value="{{ old('bairro', '') }}" required/>
         <label>Bairro</label>
+        @if(hasErrorFor('bairro')) 
+          </span> {{ getErrorFor('bairro') }} </span>
+        @endif
       </div>
 
       <div class="label-float">
-        <input type="text" placeholder=" " required/>
+        <input type="text" placeholder=" " name="cidade" value="{{ old('cidade', '') }}" required/>
         <label>Cidade</label>
+        @if(hasErrorFor('cidade')) 
+          </span> {{ getErrorFor('cidade') }} </span>
+        @endif
       </div>
 
       <div class="label-float">
-        <input type="text" placeholder=" " required/>
+        <input type="text" placeholder=" " name="estado" value="{{ old('estado', '') }}" required/>
         <label>Estado</label>
+        @if(hasErrorFor('estado')) 
+          </span> {{ getErrorFor('estado') }} </span>
+        @endif
       </div>
 
       <div class="label-float">
-        <input type="text" placeholder=" " required/>
+        <input type="text" placeholder=" " name="observacoes" value="{{ old('observacoes', '') }}" required/>
         <label>Observação do Cliente</label>
+        @if(hasErrorFor('observacoes')) 
+          </span> {{ getErrorFor('observacoes') }} </span>
+        @endif
       </div>
 
       <div class="botoes">
